[gd_scene load_steps=2 format=3 uid="uid://b0fb75hq5f7st"]

[ext_resource type="Script" uid="uid://cgvplowrjxyr5" path="res://scripts/ui/main_menu.gd" id="1_qwnig"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_qwnig")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "RTS Production Game"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="SingleplayerButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Singleplayer"

[node name="MultiplayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/SingleplayerButton" to="." method="_on_singleplayer_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
